--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev":"tsnd --respawn --transpile-only --exit-child src/app.ts"
- },
+    "dev": "tsnd --respawn --transpile-only --exit-child src/app.ts"
+  },
   "dependencies": {
     "@prisma/client": "^4.10.1",
-    "fastify": "^4.13.0"
+    "fastify": "^4.13.0",
+    "fastify-zod": "^1.2.0",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@types/node": "^18.14.1",
